--- a/XellissimeTravel/View/Storyboard/XellissimeTravel/Storyboard/XellissimeTravel/Storyboard/Base.lproj/Weather.storyboard
+++ b/XellissimeTravel/View/Storyboard/XellissimeTravel/Storyboard/XellissimeTravel/Storyboard/Base.lproj/Weather.storyboard
@@ -30,7 +30,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ucl-GL-hTb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="436" y="1441"/>
+            <point key="canvasLocation" x="-697" y="1436"/>
         </scene>
         <!--WeatherScreen1-->
         <scene sceneID="HI4-eX-599">
@@ -72,22 +72,44 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pw1-SW-en8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1274" y="1450"/>
+            <point key="canvasLocation" x="0.0" y="1436"/>
         </scene>
         <!--Weather-->
         <scene sceneID="Slb-UY-a8M">
             <objects>
-                <viewController title="Weather" id="wB7-hD-YIF" sceneMemberID="viewController">
+                <viewController title="Weather" id="wB7-hD-YIF" customClass="WeatherScreen2ViewController" customModule="XellissimeTravel" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hxm-Or-ZYy">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Here is current weather in New York City" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEH-0m-jtB">
+                                <rect key="frame" x="20" y="108" width="374" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <color key="textColor" red="0.35323774810000003" green="0.3794608116" blue="0.42745843529999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9kO-rg-TMS">
+                                <rect key="frame" x="184" y="433" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="getWeatherButtonPressed:" destination="wB7-hD-YIF" eventType="touchUpInside" id="Kbc-qz-nTz"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="0.61960784310000006" green="0.59215686270000001" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="OgU-Ai-qcC" firstAttribute="trailing" secondItem="MEH-0m-jtB" secondAttribute="trailing" constant="20" id="8GR-bp-ncn"/>
+                            <constraint firstItem="MEH-0m-jtB" firstAttribute="leading" secondItem="OgU-Ai-qcC" secondAttribute="leading" constant="20" id="BlW-Aa-HIy"/>
+                            <constraint firstItem="MEH-0m-jtB" firstAttribute="top" secondItem="OgU-Ai-qcC" secondAttribute="top" constant="20" id="P50-X4-KrL"/>
+                            <constraint firstItem="9kO-rg-TMS" firstAttribute="centerX" secondItem="Hxm-Or-ZYy" secondAttribute="centerX" id="WzJ-lM-u8C"/>
+                            <constraint firstItem="9kO-rg-TMS" firstAttribute="centerY" secondItem="Hxm-Or-ZYy" secondAttribute="centerY" id="pUL-iP-sJW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="OgU-Ai-qcC"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wKl-jP-SEg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2104" y="1446"/>
+            <point key="canvasLocation" x="887" y="1436"/>
         </scene>
     </scenes>
     <resources>
