--- a/XellissimeTravel/View/Storyboard/Base.lproj/Main.storyboard
+++ b/XellissimeTravel/View/Storyboard/Base.lproj/Main.storyboard
@@ -26,11 +26,19 @@
                                     <segue destination="Baa-Kz-IiL" kind="show" id="Mjq-FS-4Io"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LET'S GO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pTw-50-P2E">
+                                <rect key="frame" x="103" y="194" width="208" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="qjg-eo-Sua" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Kf5-Ky-sYu"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qjg-eo-Sua" secondAttribute="trailing" id="MJa-0c-s28"/>
+                            <constraint firstItem="pTw-50-P2E" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="R9E-Gy-hxb"/>
+                            <constraint firstItem="pTw-50-P2E" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="RUt-kr-KQR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qjg-eo-Sua" secondAttribute="bottom" id="Vmt-27-zBd"/>
                             <constraint firstItem="qjg-eo-Sua" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yPi-gH-v01"/>
                         </constraints>
